--- a/server.properties
+++ b/server.properties
@@ -1,2 +1,32 @@
 TXadmin: http://62.146.237.213:40120/
 PHP: http://62.146.237.213:8080/index.php
+
+
+Docker:
+
+version: '3.8'
+
+services:
+  mysql:
+    image: mysql:8.0
+    container_name: fivem-mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpass
+      MYSQL_DATABASE: fivemdb
+      MYSQL_USER: siemreap
+      MYSQL_PASSWORD: siemreap$2605
+    volumes:
+      - ./mysql:/var/lib/mysql
+    ports:
+      - "8989:3306"
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: fivem-phpmyadmin
+    restart: always
+    environment:
+      PMA_HOST: mysql
+      MYSQL_ROOT_PASSWORD: rootpass
+    ports:
+      - "8899:80"
