--- a/server.properties
+++ b/server.properties
@@ -15,7 +15,7 @@ services:
       MYSQL_ROOT_PASSWORD: rootpass
       MYSQL_DATABASE: fivemdb
       MYSQL_USER: siemreap
-      MYSQL_PASSWORD: siemreap$2605
+      MYSQL_PASSWORD: "siemreap$2605"
     volumes:
       - ./mysql:/var/lib/mysql
     ports:
