--- a/server.properties
+++ b/server.properties
@@ -12,7 +12,7 @@ services:
     container_name: fivem-mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: rootpass
+      MYSQL_ROOT_PASSWORD: "Chhitroot$2605"
       MYSQL_DATABASE: fivemdb
       MYSQL_USER: siemreap
       MYSQL_PASSWORD: "siemreap$2605"
