--- a/server.properties
+++ b/server.properties
@@ -13,7 +13,7 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: "Chhitroot$2605"
-      MYSQL_DATABASE: fivemdb
+      MYSQL_DATABASE: siemreapcity
       MYSQL_USER: siemreap
       MYSQL_PASSWORD: "siemreap$2605"
     volumes:
