--- a/server.properties
+++ b/server.properties
@@ -22,6 +22,9 @@ services:
       - "8989:3306"
 
   phpmyadmin:
+  owner:
+    Login:root
+    password:Chhitroot$2605
     image: phpmyadmin/phpmyadmin
     container_name: fivem-phpmyadmin
     restart: always
@@ -30,3 +33,15 @@ services:
       MYSQL_ROOT_PASSWORD: rootpass
     ports:
       - "8899:80"
+
+
+Txadmin:
+ឲ្យប្រាកដថាអ្នកអាចភ្ជាប់ទៅ MySQL ពី txAdmin ដោយប្រើព័ត៌មានទាំងនេះ៖
+Item	Value
+Database Host	127.0.0.1 (localhost)
+Database Port	8989
+Database Username	siemreap
+Database Password	siemreap$2605
+Database Name	siemreapcity
+Database Name	siemreapcitydemo
+Database Name	siemreapcitytest
