--- a/server.properties
+++ b/server.properties
@@ -38,10 +38,10 @@ services:
 Txadmin:
 ឲ្យប្រាកដថាអ្នកអាចភ្ជាប់ទៅ MySQL ពី txAdmin ដោយប្រើព័ត៌មានទាំងនេះ៖
 Item	Value
-Database Host	127.0.0.1 (localhost)
-Database Port	8989
-Database Username	siemreap
-Database Password	siemreap$2605
-Database Name	siemreapcity
-Database Name	siemreapcitydemo
-Database Name	siemreapcitytest
+Database Host: 127.0.0.1 (localhost)
+Database Port: 8989
+Database Username: siemreap
+Database Password: siemreap$2605
+Database Name: siemreapcity
+Database Name: siemreapcitydemo
+Database Name: siemreapcitytest
